--- a/docs/src/components/mermaid.css
+++ b/docs/src/components/mermaid.css
@@ -8,3 +8,15 @@
 #mermaid-1 .cluster-label .nodeLabel {
   color: var(--sl-color-text-invert) !important;
 }
+
+/* Dark mode edge label fixes */
+/* html[data-theme="dark"] #mermaid-1 .edgeLabel p {
+  border: 2px solid red !important;
+} */
+
+html[data-theme="dark"] #mermaid-1 .edgeLabel p,
+html[data-theme="dark"] #mermaid-1 .edgeLabel span
+{
+  background-color: #333 !important;
+  color: white !important;
+}
